--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
+    "moment": "^2.24.0",
+    "monk": "^6.0.6",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
